--- a/index.html
+++ b/index.html
@@ -6,37 +6,87 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    <div class="header">
-        <div class="logo">header logo</div>
-        <div>header link one</div>
-        <div>header link two</div>
-        <div>header link three</div>
-    </div>
+<body class="body">
 
-    <div class="section1">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
-        <button>Sign up</button>
+<nav class="navbar">
+  <div class="container">
+    <div class="logo">Header logo</div>
+    <ul>
+      <li>
+        <a href="#">header link one</a>
+      </li>
+      <li>
+        <a href="#">header link two</a>
+      </li>
+      <li>
+        <a href="#">header link three</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-        <img This is a placeholder for an image>
+<header class="header">
+  <div class="container">
+    <div>
+      <h1>This website is awesome</h1>
+      <p>This website has some subtext that goes under the main title. It's a smaller font and the color is lower contrast.</p>
+      <button>Sign up</button>
     </div>
+      <div class="img"> This is a placeholder for an image </div>
+  </div>
+  </header>
     
 
-    <div>
-        <h2>Some random information.</h2>
+<section class="info">
+  <div class="container">
+      <h2>Some random information.</h2>
+    <div class="boxstack">
 
+      <div class="box">
         <img>
-        <div>this is some subtext under an illustration of an image</div>
-        
-        <img>
-        <div>this is some subtext under an illustration of an image</div>
+        <p>this is some subtext under an illustration of an image</p>
+        </div>
 
+        <div class="box">
         <img>
-        <div>this is some subtext under an illustration of an image</div>
+        <p>this is some subtext under an illustration of an image</p>
+        </div>
 
+        <div class="box">
         <img>
-        <div>this is some subtext under an illustration of an image</div>
+        <p>this is some subtext under an illustration of an image</p>
+        </div>
+
+        <div class="box">
+        <img>
+        <p> is some subtext under an illustration of an image</p>
+      </div>
+
     </div>
+  </div>
+</section>
+
+<section class="quote">
+<div class="container">
+  <blockquote>
+    <p>
+      This is an inspiring quote, or a testominal from a customer.
+      Maybe it's just filling up space, or maybe people will actually read it. Who knows?
+      All I know is that it looks nice.
+        <footer>
+        -Thor, God of Thunder
+        </footer>
+      </p>
+    </blockquote>
+  </div>
+</section>
+
+<section class="box">
+  <div class="container">
+    <h2>Call to action! It's time!</h2>
+    <p>Sign up for our product by clicking that button right over there!</p>
+  </div>
+</section>
+
 </body>
 </html>
