finish layout of project

--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
 
       <div class="box">
         <img>
-        <p>this is some subtext under an illustration of an image</p>
+        <p>this is some subtext under an illustration or image</p>
         </div>
 
         <div class="box">
         <img>
-        <p>this is some subtext under an illustration of an image</p>
+        <p>this is some subtext under an illustration or image</p>
         </div>
 
         <div class="box">
         <img>
-        <p>this is some subtext under an illustration of an image</p>
+        <p>this is some subtext under an illustration or image</p>
         </div>
 
         <div class="box">
         <img>
-        <p> is some subtext under an illustration of an image</p>
+        <p> is some subtext under an illustration or image</p>
       </div>
 
     </div>
@@ -81,12 +81,21 @@
   </div>
 </section>
 
-<section class="box">
+<section class="actionbox">
   <div class="container">
-    <h2>Call to action! It's time!</h2>
-    <p>Sign up for our product by clicking that button right over there!</p>
-  </div>
+    <div>
+      <h2>Call to action! It's time!</h2>
+      <p>Sign up for our product by clicking that button right over there!</p>
+    </div>
+      <button>Sign up</button>
+    </div>
 </section>
+
+<footer class="footer">
+  <div class="container">
+      <div>Copyright @ The Odin Project 2021</div>
+  </div>
+</footer>
 
 </body>
 </html>
